--- a/genindex.html
+++ b/genindex.html
@@ -419,6 +419,10 @@
   <dt><a href="server/modules/db.html#index-0">dbmodule</a>
   </dt>
 
+      
+  <dt><a href="server/modules/db.html#iceprod.server.modules.db.DBResetError">DBResetError</a>
+  </dt>
+
   </dl></td>
   <td style="width: 33%" valign="top"><dl>
       
