--- a/_modules/index.html
+++ b/_modules/index.html
@@ -132,6 +132,7 @@
 <ul><li><a href="iceprod/server/dbmethods/auth.html">iceprod.server.dbmethods.auth</a></li>
 <li><a href="iceprod/server/dbmethods/queue.html">iceprod.server.dbmethods.queue</a></li>
 </ul><li><a href="iceprod/server/file_io.html">iceprod.server.file_io</a></li>
+<li><a href="iceprod/server/globus.html">iceprod.server.globus</a></li>
 <li><a href="iceprod/server/module.html">iceprod.server.module</a></li>
 <li><a href="iceprod/server/modules/db.html">iceprod.server.modules.db</a></li>
 <li><a href="iceprod/server/modules/proxy.html">iceprod.server.modules.proxy</a></li>
@@ -141,8 +142,7 @@
 <li><a href="iceprod/server/schedule.html">iceprod.server.schedule</a></li>
 <li><a href="iceprod/server/server.html">iceprod.server.server</a></li>
 <li><a href="iceprod/server/squid.html">iceprod.server.squid</a></li>
-</ul><li><a href="threading.html">threading</a></li>
-<li><a href="time.html">time</a></li>
+</ul><li><a href="time.html">time</a></li>
 </ul>
 
            </div>
