--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -16,16 +16,28 @@
     <h3>Macros</h3>
     <ul>
         <li>
-            <h4>$(job)</h4>
-            <p class="macro_desc">The job index</p>
-        </li>
-        <li>
-            <h4>$(jobs_submitted)</h4>
-            <p class="macro_desc">Number of jobs submitted</p>
+            <h4>$(dataset_id)</h4>
+            <p class="macro_desc">The dataset_id string.</p>
         </li>
         <li>
             <h4>$(dataset)</h4>
-            <p class="macro_desc">The dataset ID</p>
+            <p class="macro_desc">The dataset_id in numerical form.</p>
+        </li>
+        <li>
+            <h4>$(jobs_submitted)</h4>
+            <p class="macro_desc">The number og jobs in the dataset.</p>
+        </li>
+        <li>
+            <h4>$(job)</h4>
+            <p class="macro_desc">The job index within the dataset.</p>
+        </li>
+        <li>
+            <h4>$(task_id)</h4>
+            <p class="macro_desc">The task_id string.</p>
+        </li>
+        <li>
+            <h4>$(task)</h4>
+            <p class="macro_desc">The task name.</p>
         </li>
     </ul>
 </div>
