--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -128,6 +128,7 @@
 <span class="kn">import</span> <span class="nn">operator</span>
 <span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">OrderedDict</span><span class="p">,</span> <span class="n">Iterable</span>
 <span class="kn">import</span> <span class="nn">math</span>
+<span class="kn">import</span> <span class="nn">random</span>
 
 <span class="kn">import</span> <span class="nn">tornado.gen</span>
 
