--- a/_modules/iceprod/server/dbmethods.html
+++ b/_modules/iceprod/server/dbmethods.html
@@ -213,6 +213,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">parent</span> <span class="o">=</span> <span class="n">parent</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">io_loop</span> <span class="o">=</span> <span class="n">parent</span><span class="o">.</span><span class="n">io_loop</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">executor</span> <span class="o">=</span> <span class="n">parent</span><span class="o">.</span><span class="n">executor</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">bulk_query_limit</span> <span class="o">=</span> <span class="mi">990</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">__class__</span><span class="o">.</span><span class="n">__name__</span> <span class="o">==</span> <span class="s">&#39;MySQL&#39;</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">bulk_query_limit</span> <span class="o">=</span> <span class="mi">9990</span>
 
     <span class="k">def</span> <span class="nf">_list_to_dict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">table</span><span class="p">,</span><span class="n">input_row</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Convert an input that is a list of values from a table</span>
@@ -253,9 +256,9 @@
             <span class="n">bindings</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">bindings</span><span class="p">)</span>
         <span class="n">ret</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">while</span> <span class="n">bindings</span><span class="p">:</span>
-            <span class="n">bindings2</span> <span class="o">=</span> <span class="n">bindings</span><span class="p">[:</span><span class="mi">900</span><span class="p">]</span>
+            <span class="n">bindings2</span> <span class="o">=</span> <span class="n">bindings</span><span class="p">[:</span><span class="bp">self</span><span class="o">.</span><span class="n">bulk_query_limit</span><span class="p">]</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;bulk select %s %d&#39;</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="nb">len</span><span class="p">(</span><span class="n">bindings2</span><span class="p">))</span>
-            <span class="n">bindings</span> <span class="o">=</span> <span class="n">bindings</span><span class="p">[</span><span class="mi">900</span><span class="p">:]</span>
+            <span class="n">bindings</span> <span class="o">=</span> <span class="n">bindings</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">bulk_query_limit</span><span class="p">:]</span>
             <span class="n">sql2</span> <span class="o">=</span> <span class="n">sql</span><span class="o">%</span><span class="p">(</span><span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s">&#39;?&#39;</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="n">bindings2</span><span class="p">))</span>
             <span class="n">ret</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql2</span><span class="p">,</span> <span class="n">bindings2</span><span class="p">))</span>
         <span class="k">return</span> <span class="n">ret</span>
