--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -699,7 +699,7 @@
                 <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where dataset_id in (%s)&#39;</span>
                 <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bulk_select</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">dataset_prios</span><span class="p">):</span>
                     <span class="k">for</span> <span class="n">task_rel_id</span><span class="p">,</span> <span class="n">reqs</span> <span class="ow">in</span> <span class="p">(</span><span class="k">yield</span> <span class="n">f</span><span class="p">):</span>
-                        <span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">reqs</span>
+                        <span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">json_decode</span><span class="p">(</span><span class="n">reqs</span><span class="p">)</span>
                 <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select task_id, depends, requirements, task_rel_id &#39;</span>
                 <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;from task where task_rel_id in (%s)&#39;</span>
                 <span class="n">datasets</span> <span class="o">=</span> <span class="p">{</span><span class="n">k</span><span class="p">:</span><span class="n">OrderedDict</span><span class="p">()</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">dataset_prios</span><span class="p">}</span>
@@ -709,11 +709,10 @@
                         <span class="n">status</span> <span class="o">=</span> <span class="n">tasks</span><span class="p">[</span><span class="n">task_id</span><span class="p">][</span><span class="s">&#39;status&#39;</span><span class="p">]</span>
                         <span class="k">if</span> <span class="p">(</span><span class="n">status</span> <span class="o">==</span> <span class="s">&#39;idle&#39;</span> <span class="ow">or</span>
                             <span class="p">((</span><span class="ow">not</span> <span class="n">global_queueing</span><span class="p">)</span> <span class="ow">and</span> <span class="n">status</span> <span class="o">==</span> <span class="s">&#39;waiting&#39;</span><span class="p">)):</span>
-                            <span class="n">reqs</span> <span class="o">=</span> <span class="s">&#39;&#39;</span>
                             <span class="k">if</span> <span class="n">reqs</span><span class="p">:</span>
                                 <span class="n">reqs</span> <span class="o">=</span> <span class="n">json_decode</span><span class="p">(</span><span class="n">reqs</span><span class="p">)</span>
                             <span class="k">elif</span> <span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">]:</span>
-                                <span class="n">reqs</span> <span class="o">=</span> <span class="n">json_decode</span><span class="p">(</span><span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">])</span>
+                                <span class="n">reqs</span> <span class="o">=</span> <span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">]</span>
                             <span class="n">datasets</span><span class="p">[</span><span class="n">dataset</span><span class="p">][</span><span class="n">task_id</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span><span class="n">depends</span><span class="p">,</span><span class="n">reqs</span><span class="p">,</span><span class="n">task_rel_id</span><span class="p">]</span>
             <span class="k">except</span><span class="p">:</span>
                 <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error getting processing tasks&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
@@ -738,6 +737,7 @@
                     <span class="k">elif</span> <span class="n">depends</span><span class="p">:</span>
                         <span class="k">for</span> <span class="n">dep</span> <span class="ow">in</span> <span class="n">depends</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s">&#39;,&#39;</span><span class="p">):</span>
                             <span class="k">if</span> <span class="n">dep</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">tasks</span><span class="p">:</span>
+                                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;look up depend status: %r&#39;</span><span class="p">,</span><span class="n">dep</span><span class="p">)</span>
                                 <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select task_status from search where task_id = ?&#39;</span>
                                 <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dep</span><span class="p">,)</span>
                                 <span class="k">try</span><span class="p">:</span>
