--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -722,7 +722,7 @@
             <span class="n">task_prio</span> <span class="o">=</span> <span class="p">[]</span>
             <span class="k">for</span> <span class="n">dataset</span> <span class="ow">in</span> <span class="n">dataset_prios</span><span class="p">:</span>
                 <span class="n">limit</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">math</span><span class="o">.</span><span class="n">ceil</span><span class="p">(</span><span class="n">dataset_prios</span><span class="p">[</span><span class="n">dataset</span><span class="p">]</span><span class="o">*</span><span class="n">num</span><span class="p">))</span>
-                <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s">&#39;queue() dataset %s, limit is %d, available is %d&#39;</span><span class="p">,</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;queue() dataset %s, limit is %d, available is %d&#39;</span><span class="p">,</span>
                              <span class="n">dataset</span><span class="p">,</span> <span class="n">limit</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">datasets</span><span class="p">[</span><span class="n">dataset</span><span class="p">]))</span>
                 <span class="k">def</span> <span class="nf">sort_key</span><span class="p">(</span><span class="n">k</span><span class="p">):</span>
                     <span class="k">if</span> <span class="n">datasets</span><span class="p">[</span><span class="n">dataset</span><span class="p">][</span><span class="n">k</span><span class="p">][</span><span class="mi">0</span><span class="p">]:</span>
@@ -773,7 +773,9 @@
                         <span class="n">limit</span> <span class="o">-=</span> <span class="mi">1</span>
                         <span class="k">if</span> <span class="n">limit</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
                             <span class="k">break</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s">&#39;queue() %d tasks can queue&#39;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">task_prio</span><span class="p">))</span>
+                    <span class="k">else</span><span class="p">:</span>
+                        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;task %r cannot be queued yet&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
+            <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;queue() %d tasks can queue&#39;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">task_prio</span><span class="p">))</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">task_prio</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">({})</span>
             <span class="c"># sort by prio, low to high (so when we pop we get higher first)</span>
