--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -734,6 +734,7 @@
                     <span class="n">satisfied</span> <span class="o">=</span> <span class="k">True</span>
                     <span class="k">if</span> <span class="n">depends</span> <span class="o">==</span> <span class="s">&#39;unknown&#39;</span><span class="p">:</span> <span class="c"># depends not yet computed</span>
                         <span class="n">satisfied</span> <span class="o">=</span> <span class="k">False</span>
+                        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;task %r has unknown depends&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
                     <span class="k">elif</span> <span class="n">depends</span><span class="p">:</span>
                         <span class="k">for</span> <span class="n">dep</span> <span class="ow">in</span> <span class="n">depends</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s">&#39;,&#39;</span><span class="p">):</span>
                             <span class="k">if</span> <span class="n">dep</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">tasks</span><span class="p">:</span>
@@ -773,8 +774,7 @@
                         <span class="n">limit</span> <span class="o">-=</span> <span class="mi">1</span>
                         <span class="k">if</span> <span class="n">limit</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
                             <span class="k">break</span>
-                    <span class="k">else</span><span class="p">:</span>
-                        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;task %r cannot be queued yet&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
+
             <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;queue() %d tasks can queue&#39;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">task_prio</span><span class="p">))</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">task_prio</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">({})</span>
