--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -757,9 +757,11 @@
                                     <span class="n">satisfied</span> <span class="o">=</span> <span class="k">False</span>
                                     <span class="k">break</span>
                                 <span class="k">elif</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">!=</span> <span class="s">&#39;complete&#39;</span><span class="p">:</span>
+                                    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;depends not yet satisfied: %r&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
                                     <span class="n">satisfied</span> <span class="o">=</span> <span class="k">False</span>
                                     <span class="k">break</span>
                             <span class="k">elif</span> <span class="n">tasks</span><span class="p">[</span><span class="n">dep</span><span class="p">][</span><span class="s">&#39;status&#39;</span><span class="p">]</span> <span class="o">!=</span> <span class="s">&#39;complete&#39;</span><span class="p">:</span>
+                                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;depends not yet satisfied: %r&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
                                 <span class="n">satisfied</span> <span class="o">=</span> <span class="k">False</span>
                                 <span class="k">break</span>
                     <span class="k">if</span> <span class="n">satisfied</span> <span class="ow">and</span> <span class="n">reqs</span> <span class="ow">and</span> <span class="n">resources</span><span class="p">:</span>
@@ -767,6 +769,7 @@
                         <span class="k">try</span><span class="p">:</span>
                             <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">reqs</span><span class="p">:</span>
                                 <span class="k">if</span> <span class="n">r</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">resources</span><span class="p">:</span>
+                                    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;reqs not satisfied: %r&#39;</span><span class="p">,</span> <span class="n">task_id</span><span class="p">)</span>
                                     <span class="n">satisfied</span> <span class="o">=</span> <span class="k">False</span>
                                     <span class="k">break</span>
                         <span class="k">except</span><span class="p">:</span>
